<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="@dimen/_255sdp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:id="@+id/newsItemCardView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/_2sdp"
        app:cardBackgroundColor="@color/white"
        android:elevation="@dimen/_5sdp"
        android:padding="@dimen/_10sdp"
        app:cardCornerRadius="@dimen/_10sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageNewsPhoto"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_135sdp"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                android:contentDescription="@string/app_name" />

            <TextView
                android:id="@+id/textMainHeadline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/_5sdp"
                android:ellipsize="end"
                android:maxLines="2"
                android:textColor="@color/black"
                android:text="@string/main_heading_text"
                android:textSize="@dimen/_18ssp"
                android:fontFamily="@font/roboto_bold"
                />


            <TextView
                android:id="@+id/textMainContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/_5sdp"
                android:ellipsize="end"
                android:maxLines="3"
                android:textColor="@color/black"
                android:text="@string/main_content_text"
                android:textSize="@dimen/_13ssp"
                android:fontFamily="@font/roboto_regular"
                />

            <TextView
                android:id="@+id/textAuthor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/_5sdp"
                android:paddingHorizontal="@dimen/_20sdp"
                android:ellipsize="end"
                android:maxLines="2"
                android:textAlignment="viewEnd"
                android:textColor="@color/black"
                android:text="@string/author_name"
                android:textSize="@dimen/_12ssp"
                android:fontFamily="@font/roboto_italic"
                />

            <TextView
                android:id="@+id/textPublishTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/_5sdp"
                android:paddingHorizontal="@dimen/_20sdp"
                android:ellipsize="end"
                android:maxLines="2"
                android:textAlignment="viewEnd"
                android:textColor="@color/black"
                android:text="@string/publish_timing"
                android:textSize="@dimen/_12ssp"
                android:fontFamily="@font/roboto_italic"
                />

        </LinearLayout>


    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>